--- a/clase2.html
+++ b/clase2.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <!-- u untracket sin seguimiento (cuando haces git init y se pone en verde u) -->
+     <!-- m de modificado -->
+      <!-- git log -- oneline para ver todos los comits q hicegit -->
+       <!-- git --hard lo q ves en log -->
+      <header>
+        <nav>
+
+        </nav>
+      </header>
+      <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
