--- a/clase2.html
+++ b/clase2.html
@@ -16,7 +16,7 @@
         </nav>
       </header>
       <main>
-      <section></section>
+      <section>h</section>
       <section></section>
       <section></section>
     </main>
