--- a/clase2.html
+++ b/clase2.html
@@ -9,7 +9,7 @@
     <!-- u untracket sin seguimiento (cuando haces git init y se pone en verde u) -->
      <!-- m de modificado -->
       <!-- git log -- oneline para ver todos los comits q hicegit -->
-       <!-- git --hard lo q ves en log -->
+       <!-- git reset  --hard lo q ves en log -->
       <header>
         <nav>
 
