--- a/clase2.html
+++ b/clase2.html
@@ -17,7 +17,7 @@
       </header>
       <main>
       <section>h</section>
-      <section></section>
+      <section>hola</section>
       <section></section>
     </main>
     <footer></footer>
