--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>hola</h1>
    <img src="img/auris1.jpg" alt="">
+   <!-- readmi es un manual para el usuario, q documenta -->
 </body>
 </html>
