--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>hola</h1>
-   <img src="img/auris1.jpg" alt="">
+    <div class="intento">
+        <p class="intent">
+            yuxsnjam
+        </p>
+      </div>
+   <!-- <img src="img/auris1.jpg" alt=""> -->
+
    <!-- readmi es un manual para el usuario, q documenta -->
+    <!-- git push para subir cambios -->
+    <!-- git pull para traer cambios -->
+
+    <!-- git pull para traer los cambios q hiciste en el readme -->
+
+     <!-- settings page main save asi vas a tener la url de tu pag, 
+      para q funcione si o si debes tener un index.html -->
+
+      <!-- en readme pones #algo# o **algo** y luego guaras -->
+
+      <!-- clase 5 -->
+
+      <h1 class="color">hola en color lila</h1>
+      <section class="we">
+      <p><span>aqui</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ad minima similique. Vel, voluptas, asperiores atque nobis earum voluptatum sapiente dolorum ipsum consectetur quidem eaque facere officia labore provident excepturi.
+      Voluptate dolore quae velit at sequi beatae animi atque similique, repellat magni amet autem modi, eos, ratione cupiditate doloremque quas corporis ad fugiat! Iusto animi cupiditate explicabo quas possimus et.
+      Sint optio nostrum sequi veritatis illum, eius, reiciendis aut laudantium eos quia necessitatibus. Quibusdam quasi, maxime aliquam laudantium a saepe nesciunt blanditiis voluptates fugiat obcaecati voluptatibus explicabo consequatur sapiente. Dolorum.
+      Obcaecati, perferendis ratione. Cumque corporis accusamus laudantium error esse, porro possimus explicabo voluptatem obcaecati nostrum, labore officia est in accusantium nobis, sequi voluptates vero repudiandae et recusandae officiis. Similique, odit?
+      Culpa impedit neque vitae rem repudiandae ab maiores est. Et eaque laborum atque animi asperiores fugit nesciunt similique iusto unde aut consequatur nisi voluptatem</p>
+    </section>
+      <div>
+        <p>parrafo verde</p>
+      </div>
+      <label for="">Nombre</label>
+     <!-- <input type="text"> -->
+      <!-- mira en css como hacer para q al escribir en el input la letra sea color verde -->
+
+      <section class="a">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat assumenda ducimus neque voluptatem praesentium iste atqueuu</h2>
+      </section>
+      <section class="h">
+        <p class="r">Lorem ipsum dolor .</p>
+      </section>
+     
+      
 </body>
 </html>
